fix: scrollbar design

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,39 @@
   --background: #030712;
   --foreground: #f9fafb;
 }
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 6px;
+}
 
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #374151;
+  border-radius: 999px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #4b5563;
+}
+
+.dark ::-webkit-scrollbar-thumb {
+  background: #374151;
+}
+
+.dark ::-webkit-scrollbar-thumb:hover {
+  background: #4b5563;
+}
+
+:not(.dark) ::-webkit-scrollbar-thumb {
+  background: #d1d5db;
+}
+
+:not(.dark) ::-webkit-scrollbar-thumb:hover {
+  background: #9ca3af;
+}
 body {
   background-color: var(--background);
   color: var(--foreground);
